--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
+header {
+  background: -webkit-linear-gradient(45deg, darkslategrey, lightgray);
+  -webkit-backgroud-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: flex;
+  justify-content: center;
+  padding: 1.5rem 0;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100%;
+  padding: 1rem 0.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  max-width: 320px;
+  padding: 0 1rem 1rem;
+  background-color: rgba(255,255,255,0.9);
+  border-radius: 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+form {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-evenly;
+  border-radius: 0.5rem;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+button,
+textarea {
+  font-size: 22px;
+  padding: 0.25rem;
+  border-radius: 0.5rem;
+}
+
+label, button {
+  margin-top: 1rem;
+}
+
+button {
+  background-color: lightgray;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+button:disabled {
+  color:#bbb;
+  cursor: default;
+}
+
+.aria-hidden {
+  position: absolute;
+  top: -100vh;
+  margin-top: 0
+}
+
+.hidden {
+  display: none;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.valid {
+  color: limegreen;
+  margin-left: 0.25rem;
+}
+
+.invalid {
+  color: red;
+  margin-left: 0.25rem;
+}
+
+.error {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.25rem;
+}
+
+.instructions {
+  font-size: 0.75rem;
+  border-radius: 0.5rem;
+  background: #000;
+  color: #fff;
+  padding: 0.25rem;
+  position: relative;
+  bottom: -10px;
+}
+
+.instructions > svg {
+  margin-right: 0.25rem;
+}
+
+@media screen and (min-width: 600px) {
+  section {
+    max-width: 420px;
   }
 }
