--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html, body {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 body {
   margin: 0;
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
