--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   min-height: 100vh;
   background-size: cover;
+  background-color: dimgray;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
