--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,105 @@
 @-webkit-keyframes header-gradient {
-    0%{text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;}
-    50%{text-shadow: 0.5px 0.5px 1px #777, 0 0 0.25em #fff, 0 0 0.05em #fff;}
-    0%{text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;}
+  0%{text-shadow: 1px 1px 2px #777, 0px 0px 1em #fff, 0px 0px 0.2em #fff};
+  33%{text-shadow: 1px 1px 2px #777, 1px 0.5px 0.5em #fff, 1px 0.5px 0.1em #fff};
+  66%{text-shadow: 1px 1px 2px #777, 1px 1px 1em #fff, 1px 1px 0.2em #fff};
+  100%{text-shadow: 1px 1px 2px #777, 1px 0.5px 0.5em #fff, 1px 0.5px 0.1em #fff};
 }
 @-moz-keyframes header-gradient {
-  0%{text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;}
-  50%{text-shadow: 0.5px 0.5px 1px #777, 0 0 0.25em #fff, 0 0 0.05em #fff;}
-  0%{text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;}
+  0%{text-shadow: 1px 1px 2px #777, 0px 0px 1em #fff, 0px 0px 0.2em #fff};
+  33%{text-shadow: 1px 1px 2px #777, 1px 0.5px 0.5em #fff, 1px 0.5px 0.1em #fff};
+  66%{text-shadow: 1px 1px 2px #777, 1px 1px 1em #fff, 1px 1px 0.2em #fff};
+  100%{text-shadow: 1px 1px 2px #777, 1px 0.5px 0.5em #fff, 1px 0.5px 0.1em #fff};
 }
-@keyframes header-gradient { 
-  0%{text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;}
-  50%{text-shadow: 0.5px 0.5px 1px #777, 0 0 0.25em #fff, 0 0 0.05em #fff;}
-  0%{text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;}
+@keyframes header-gradient {
+  0%{text-shadow: 1px 1px 2px #777, 0px 0px 1em #fff, 0px 0px 0.2em #fff};
+  33%{text-shadow: 1px 1px 2px #777, 1px 0.5px 0.5em #fff, 1px 0.5px 0.1em #fff};
+  66%{text-shadow: 1px 1px 2px #777, 1px 1px 1em #fff, 1px 1px 0.2em #fff};
+  100%{text-shadow: 1px 1px 2px #777, 1px 0.5px 0.5em #fff, 1px 0.5px 0.1em #fff};
 }
 
 header {
-  -webkit-animation: header-gradient 24s ease infinite;
-  -moz-animation: header-gradient 24s ease infinite;
-  animation: header-gradient 24s ease infinite;
-  
+  -webkit-animation: header-gradient 20s linear infinite alternate;
+  -moz-animation: header-gradient 20s linear infinite alternate;
+  animation: header-gradient 20s linear infinite alternate;
+
   background: -webkit-linear-gradient(135deg, darkslategrey, lightgray);
   -webkit-backgroud-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: 'Play', sans-serif;
   display: flex;
   justify-content: space-between;
   padding: 1.5rem 0;
   font-size: 2rem;
   font-weight: bold;
   text-shadow: 1px 1px 2px #777, 0 0 1em #fff, 0 0 0.2em #fff;
+  z-index: 999;
+  position: relative;
 }
 
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  padding: 3rem 0.6rem;
+  min-height: 80%;
+}
+
+.app-container {
+  background-color: rgba(255, 255, 255, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.chat-container,
+.input-container {
+  position: relative;
+  width: 90%;
+}
+
+.chat-container {
+  margin-top: 7rem;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-background {
+  overflow-y: scroll;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 1rem;
+  padding: 2rem;
 }
 
 .input-container {
-  bottom: 1rem;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  width: 33%;
-  margin-left: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
 }
 
 .input-container > label {
-  color: #333;
-  margin-bottom: 3px;
-  text-shadow: 1px 1px 1px rgba(255,255,255,0.5),
-  1px -1px 1px rgba(255,255,255,0.5),
-  -1px 1px 1px rgba(255,255,255,0.5),
-  -1px -1px 1px rgba(255,255,255,0.5);
+  color: white;
+  margin: 0.5rem;
+  margin-bottom: 0.1rem;
+  text-shadow: 1px 1px 1px black, 1px -1px 1px black, -1px 1px 1px black, -1px -1px 1px black;
+}
+
+.registration {
+  margin-top: 3rem;
 }
 
 textarea.user-input {
   background-color: rgba(255,255,255,0.9);
   border-radius: 0.5rem;
+  font-family: 'Roboto';
   font-size: 1rem;
-  max-width: 432px;
   padding: 0.5rem;
-  width: 100%;
   word-wrap: break-word;
 }
 
@@ -80,11 +117,12 @@ section {
 section.user-query,
 section.gpt-reply {
   margin: 1rem 0;
+  max-width: 80%;
 }
 
 section.user-query {
   background-color: rgba(240,240,240,0.9);
-  margin-left: 2rem;
+  margin-left: 3rem;
 }
 section.gpt-reply {
   background-color: rgba(192,255,192,0.9);
@@ -240,5 +278,10 @@ hr {
 @media screen and (min-width: 600px) {
   section {
     max-width: 420px;
+  }
+  .chat-container,
+  .input-container {
+    position: relative;
+    width: 45%;
   }
 }
