--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,30 @@ main {
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 1rem;
   padding: 2rem;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.query-icon {
+  color: rgb(240, 128, 128);
+  background-color: rgb(255, 251, 221);
+  border: 1px solid black;
+  cursor: pointer;
+  top: 30px;
+  right: 1px;
+  font-size: 2.01em;
+  position: absolute;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.query-icon:hover {
+  color: rgb(240, 64, 64);
+  background-color: rgb(255, 235, 205);
+  text-shadow: 1px 1px 1px white,
+              1px 1px 1px white,
+              1px 1px 1px white,
+              1px 1px 1px white;
 }
 
 .input-container {
@@ -100,6 +124,7 @@ textarea.user-input {
   font-family: 'Roboto';
   font-size: 1rem;
   padding: 0.5rem;
+  padding-right: 2em;
   resize: none;
   word-wrap: break-word;
 }
