--- a/src/App.css
+++ b/src/App.css
@@ -44,91 +44,6 @@ main {
   min-height: 80%;
 }
 
-.app-container {
-  background-color: rgba(255, 255, 255, 0.3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.chat-container,
-.input-container {
-  position: relative;
-  width: 98%;
-}
-
-.chat-container {
-  margin-top: 5.5rem;
-  overflow-y: hidden;
-  display: flex;
-  flex-direction: column;
-}
-
-.chat-background {
-  overflow-y: scroll;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-radius: 1rem;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.query-icon {
-  color: rgb(240, 128, 128);
-  background-color: rgb(255, 251, 221);
-  border: 1px solid black;
-  cursor: pointer;
-  top: 30px;
-  right: 1px;
-  font-size: 2em;
-  position: absolute;
-  border-radius: 5px;
-  padding: 10px;
-}
-
-.query-icon:hover {
-  color: rgb(240, 64, 64);
-  background-color: rgb(255, 235, 205);
-  text-shadow: 1px 1px 1px white,
-              1px 1px 1px white,
-              1px 1px 1px white,
-              1px 1px 1px white;
-}
-
-.input-container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-  margin-top: 0.5rem;
-}
-
-.input-container > label {
-  color: white;
-  margin: 0.5rem;
-  margin-bottom: 0.1rem;
-  text-shadow: 1px 1px 1px black, 1px -1px 1px black, -1px 1px 1px black, -1px -1px 1px black;
-}
-
-.registration {
-  margin-top: 3rem;
-}
-
-textarea.user-input {
-  background-color: rgba(255,255,255,0.9);
-  border-radius: 0.5rem;
-  font-family: 'Roboto';
-  font-size: 1rem;
-  padding: 0.5rem;
-  padding-right: 2em;
-  resize: none;
-  word-wrap: break-word;
-}
-
 section {
   display: flex;
   flex-direction: column;
@@ -138,22 +53,6 @@ section {
   padding: 0 1rem 1rem;
   background-color: rgba(255,255,255,0.9);
   border-radius: 0.5rem;
-}
-
-section.user-query,
-section.gpt-reply {
-  margin: 1rem 0;
-  max-width: 90%;
-}
-
-section.user-query {
-  background-color: rgba(240,240,240,0.9);
-  margin-left: 1rem;
-}
-section.gpt-reply {
-  background-color: rgba(192,255,192,0.9);
-  margin-right: 2rem;
-  margin-left: -1rem;
 }
 
 form {
@@ -169,6 +68,7 @@ input[type="email"],
 input[type="password"],
 button,
 textarea {
+  font-family: 'Roboto';
   font-size: 22px;
   padding: 0.25rem;
   border-radius: 0.5rem;
@@ -176,6 +76,11 @@ textarea {
 
 label, button {
   margin-top: 1rem;
+}
+
+.button-tray {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 button {
@@ -210,6 +115,10 @@ hr {
 
 .inline {
   display: inline-block;
+}
+
+.registration {
+  margin-top: 3rem;
 }
 
 .valid {
@@ -272,6 +181,7 @@ hr {
   right: 0;
   
 }
+
 .spacer {
   min-width: 3.75rem;
 }
@@ -305,13 +215,5 @@ hr {
 @media screen and (min-width: 600px) {
   section {
     max-width: 420px;
-  }
-  .chat-container {
-    margin-top: 7rem;
-  }
-  .chat-container,
-  .input-container {
-    position: relative;
-    width: 45%;
   }
 }
