--- a/src/app/physgpt.css
+++ b/src/app/physgpt.css
@@ -25,12 +25,24 @@
 }
 
 .chat-background {
+  overflow-x: hidden;
   overflow-y: scroll;
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 1rem;
   padding: 2rem;
   display: flex;
   flex-direction: column-reverse;
+}
+
+.chat-fader {
+  position: absolute;
+  background: linear-gradient(#fff, transparent);
+  width: 100%;
+  height: 99px;
+  top: 0;
+  margin-left: -2em;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .query-icon {
